# tutor-contrib-s3scorm

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml
tutors3scorm/: __about__.py  plugin.py
tutors3scorm/patches/: caddyfile-cms  caddyfile-lms  openedx-cms-common-settings  openedx-lms-common-settings
